# paralela_proyecto

./: CMakeLists.txt  README.md  configure.sh  run.sh
src/: main.cpp  paralelo.cpp  paralelo.h  secuencial.cpp  secuencial.h
